[gd_scene load_steps=8 format=3 uid="uid://53ka1brdqd3s"]

[ext_resource type="Script" path="res://ui/menu/options_menu.gd" id="1_flr5y"]
[ext_resource type="Texture2D" uid="uid://bnxcaj66q3hnj" path="res://assets/Main Menu Background.jpg" id="2_hkspu"]
[ext_resource type="Script" path="res://ui/menu/resolution_dropbox.gd" id="3_bvd68"]
[ext_resource type="PackedScene" uid="uid://1hnco7yhjexd" path="res://ui/buttons/input_button.tscn" id="3_xo33c"]
[ext_resource type="Script" path="res://ui/menu/input_settings.gd" id="4_5nt2n"]

[sub_resource type="LabelSettings" id="LabelSettings_4flhf"]
font_size = 100
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n72c1"]
font_size = 40
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.329412)

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flr5y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackGround" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_hkspu")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPÇÕES"
label_settings = SubResource("LabelSettings_4flhf")
horizontal_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
tab_alignment = 1
current_tab = 0

[node name="Vídeo" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="resolution" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="resolution_label" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution/resolution_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution/resolution_label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "Resoluções"
label_settings = SubResource("LabelSettings_n72c1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution/resolution_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="resolution_dropbox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution/resolution_dropbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="resolution_dropbox" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution/resolution_dropbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
allow_reselect = true
script = ExtResource("3_bvd68")

[node name="Control4" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution/resolution_dropbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="window_mode" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="window_mode_label" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode/window_mode_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode/window_mode_label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Window mode"
label_settings = SubResource("LabelSettings_n72c1")
horizontal_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode/window_mode_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="window_mode_dropbox" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode/window_mode_dropbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="window_mode_dropbox" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode/window_mode_dropbox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
allow_reselect = true
item_count = 3
popup/item_0/text = "Windowed"
popup/item_1/text = "Borderless"
popup/item_1/id = 3
popup/item_2/text = "Fullscreen"
popup/item_2/id = 4

[node name="Control4" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode/window_mode_dropbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Áudio" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_tab_index = 1

[node name="audio_options" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="volume_master" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options"]
layout_mode = 2
size_flags_vertical = 0

[node name="volume_master_label" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master"]
layout_mode = 2
size_flags_horizontal = 3

[node name="C" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_master_label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Volume Geral"
label_settings = SubResource("LabelSettings_n72c1")
horizontal_alignment = 1

[node name="C2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_master_slider" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master"]
layout_mode = 2
size_flags_horizontal = 3

[node name="C" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_master_slider" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_slider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -30.0
max_value = 0.0
tick_count = 11

[node name="C2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_music" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options"]
layout_mode = 2
size_flags_vertical = 0

[node name="volume_music_label" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music"]
layout_mode = 2
size_flags_horizontal = 3

[node name="C" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_music_label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Volume Música"
label_settings = SubResource("LabelSettings_n72c1")
horizontal_alignment = 1

[node name="C2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_music_slider" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music"]
layout_mode = 2
size_flags_horizontal = 3

[node name="C" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_music_slider" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_slider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -30.0
max_value = 0.0
tick_count = 11

[node name="C2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_sfx" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options"]
layout_mode = 2
size_flags_vertical = 0

[node name="volume_sfx_label" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx"]
layout_mode = 2
size_flags_horizontal = 3

[node name="C" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_sfx_label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Volume SFX"
label_settings = SubResource("LabelSettings_n72c1")
horizontal_alignment = 1

[node name="C2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_sfx_slider" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx"]
layout_mode = 2
size_flags_horizontal = 3

[node name="C" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="volume_sfx_slider" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_slider"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -30.0
max_value = 0.0
tick_count = 11

[node name="C2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_slider"]
layout_mode = 2
size_flags_horizontal = 3

[node name="mute" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options"]
layout_mode = 2
size_flags_vertical = 0

[node name="mute_label" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute/mute_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute/mute_label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Mute"
label_settings = SubResource("LabelSettings_n72c1")
horizontal_alignment = 1

[node name="Control2" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute/mute_label"]
layout_mode = 2
size_flags_horizontal = 3

[node name="mute_check" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute/mute_check"]
layout_mode = 2
size_flags_horizontal = 3

[node name="mute_checkbox" type="CheckBox" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute/mute_check"]
layout_mode = 2

[node name="Control4" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute/mute_check"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Controles" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("4_5nt2n")
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="keybinding_list" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="input_button" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles/MarginContainer/VBoxContainer/ScrollContainer/keybinding_list" instance=ExtResource("3_xo33c")]
layout_mode = 2

[node name="reset_button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 40
text = "Resetar Controles"

[node name="back" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="back_button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/back"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
text = "Voltar"

[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/resolution/resolution_dropbox/resolution_dropbox" to="." method="_on_resolution_dropbox_item_selected"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Vídeo/VBoxContainer/window_mode/window_mode_dropbox/window_mode_dropbox" to="." method="_on_window_mode_dropbox_item_selected"]
[connection signal="drag_ended" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_slider/volume_master_slider" to="." method="_on_volume_master_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_master/volume_master_slider/volume_master_slider" to="." method="_on_volume_master_slider_value_changed"]
[connection signal="drag_ended" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_slider/volume_music_slider" to="." method="_on_volume_music_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_music/volume_music_slider/volume_music_slider" to="." method="_on_volume_music_slider_value_changed"]
[connection signal="drag_ended" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_slider/volume_sfx_slider" to="." method="_on_volume_sfx_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/volume_sfx/volume_sfx_slider/volume_sfx_slider" to="." method="_on_volume_sfx_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Áudio/audio_options/mute/mute_check/mute_checkbox" to="." method="_on_mute_checkbox_toggled"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles/MarginContainer/VBoxContainer/reset_button" to="CanvasLayer/MarginContainer/VBoxContainer/TabContainer/Controles" method="_on_reset_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/back/back_button" to="." method="_on_back_button_pressed"]
